--- a/Week 1/BOT.ipynb
+++ b/Week 1/BOT.ipynb
@@ -14,6 +14,13 @@
     "- Phương án 2: Phương pháp quy hoạch động `Dynamic Programming` để tối ưu về thời gian.\n",
     "\n",
     "# Thiết kế thuật toán \n",
+    "**_Input:_**\n",
+    "- Độ dài dãy $a$ ($n$) không được nhiều hơn $10^6$ ( $0 \\le n\\le 10^6$ )\n",
+    "- Mỗi phần tử thứ $i$ của dãy $a$ không được vượt quá $10^9$ ( $0 \\le a_i \\le 10^9$ )\n",
+    "\n",
+    "**_Output:_**\n",
+    " - Hai số nguyên p, q là đoạn cần tìm kiếm và lãi thu được.\n",
+    "\n",
     "**1. Ý TƯỞNG:**\n",
     "\n",
     "Về phương pháp quy hoạch động, ta sử dụng một biến tạm để lưu trữ tổng giá trị đến thời điểm hiện tại. Ta thấy có 3 trường hợp xảy ra: \n",
@@ -22,11 +29,12 @@
     "- Nếu biến tạm bé hơn 0, lúc này đoạn con cập nhật tới thời điểm hiện tại không còn ý nghĩa nữa vì nếu\n",
     "- Cộng tiếp tục giá trị tiếp theo, nếu là số dương thì dương + âm vẫn bé hơn số dương đó, nếu là số âm thì đoạn càng giảm..\n",
     "    \n",
-    "**2. Thuật toán:**\n",
+    "**2. THUẬT TOÁN:**\n",
     "\n",
     "**_Pseudo code:_**\n",
     "```\n",
-    "res_data = {\n",
+    "res_data = \n",
+    "{\n",
     "    'from': 1,\n",
     "    'to': len(data),\n",
     "    'sum': sum(data)\n",
