--- a/Week 2/CountingStars.ipynb
+++ b/Week 2/CountingStars.ipynb
@@ -6,24 +6,33 @@
    "source": [
     "# Tóm tắt\n",
     "\n",
-    "Nói chung là làm sao để có được nhiều sao khi tịnh tiến 2 cục toạ độ tầm nhìn qua các điểm (sao)\n",
+    "Tìm ra một chuỗi sao, sao cho độ dài chuỗi sao dài nhất có thể khi tịnh tiến 2 cục toạ độ tầm nhìn qua các điểm (sao)\n",
     "\n",
     "# Nhận dạng\n",
     "\n",
-    "Toán Hình học\n",
+    "Ta cần áp dụng một số tính chất của toán hình học để thỏa mãn một số tính chất của góc và quy bài toán về tìm dãy con lớn nhất\n",
     "\n",
     "# Thiết kế thuật toán\n",
+    "**_Input:_**\n",
+    "- Dòng đầu tiên: Một số integer n ($1\\le n \\le10^5$) - Số ngôi sao\n",
+    "- Dòng thứ hai: 2 phân số đơn giản thể hiện mối quan hệ \"a/b c/d\", sao cho $\\frac{a}{b} = \\frac{sin({\\alpha}_{1})}{cos({\\alpha}_{1})}$, $\\frac{c}{d} = \\frac{sin({\\alpha}_{2})}{cos({\\alpha}_{2})}$\n",
+    "- n dòng tiếp theo: cặp số integer $x_i, y_i(1 \\le x_i , y_i \\le 10^5)$ - Tọa độ các ngôi sao, biết rằng mọi ngôi sao có tọa độ khác nhau.\n",
     "\n",
-    "* Tính góc α1 = atan(c/d)\n",
-    "* Rỏ ràng ta có được phương trình 1: xoay trục ox 1 góc α1 với α1 = atan(a/b) -> vậy là ta có đường 1 tạm gọi là Line1: y = tan(α1)x\n",
-    "* lập phương trình L: y = tan(α2 − α1)x (hoặc là không *p/s: có thể thử L: y = tan(α2)x hoặc y = tan(α1)x if u feel aventurous)\n",
-    "* rồi ta thế O(xi, yi) vô 2 phương trình thì các điểm (x, y) nằm trên L dưới Line1 là điểm không cần thiết -> có thể loại bỏ các điểm rác (hoặc là không *p/s: có thể loại ngay khúc nhập dl)\n",
-    "* có 2 cách từ đây:\n",
-    "   - xét khoảng các euclid tất cả các điểm tới điểm đang xét\n",
-    "   - cho phương trình L chạy trên trục x sao cho các điểm sao đi qua L\n",
-    "       - khi tịnh tiến trên phương trình L thì ta có 2 phần phần y và y' với y\n",
-    "       - khi đó ta xắp xếp lại các toạ độ theo thứ tự y' tăng dần\n",
-    "       - bài toán từ đây trở thành bài toán tìm dãy con tăng dần lớn nhất"
+    "**_Output:_**\n",
+    "- Số sao lớn nhất mà chuỗi của Jerry có thể chứa.\n",
+    "\n",
+    "**Ý TƯỞNG**\n",
+    "- Tính góc ${\\alpha}_{1}$ = $arctan(\\frac{a}{b})$.\n",
+    "- Rõ ràng ta có được phương trình 1: xoay trục $Ox$ 1 góc ${\\alpha}_{1}$ với ${\\alpha}_{1}$ = $arctan(\\frac{a}{b})$ => vậy là ta có đường 1 tạm gọi là $L1$: y = $tan({\\alpha}_{1})x$.\n",
+    "- Lập phương trình $L$: y = $tan({\\alpha}_{1} − {\\alpha}_{1})x$ [hoặc có thể thử $L$: y = $tan({\\alpha}_{1})x$ hoặc y = $tan({\\alpha}_{2})x$ if u feel aventurous] rồi ta thế $O(x_i, y_i)$ vô 2 phương trình thì các điểm $(x, y)$ nằm trên $L$ dưới $L1$ là điểm không cần thiết => có thể loại bỏ các điểm rác.\n",
+    "- Có 2 cách từ đây:\n",
+    "    * Xét khoảng các Euclid tất cả các điểm tới điểm đang xét.\n",
+    "    * Cho phương trình $L$ chạy trên trục $x$ sao cho các điểm sao đi qua $L$.\n",
+    "        * Khi tịnh tiến trên phương trình $L$ thì ta có 2 phần phần $y$ và $y'$ với $y$.\n",
+    "        * Khi đó ta xắp xếp lại các toạ độ theo thứ tự $y'$ tăng dần.\n",
+    "        * Bài toán từ đây trở thành bài toán tìm dãy con tăng dần lớn nhất.\n",
+    "        \n",
+    "# Cài đặt"
    ]
   },
   {
@@ -123,7 +132,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
