--- a/Week 2/SeaWeed.ipynb
+++ b/Week 2/SeaWeed.ipynb
@@ -5,27 +5,40 @@
    "metadata": {},
    "source": [
     "# Tóm tắt\n",
-    "- Cho dãy số Fibonacci tại n, tìm phần tử thứ 2k+1 của dãy số\n",
+    "Cho dãy số Fibonacci tại n, tìm phần tử thứ 2k+1 của dãy số\n",
     "\n",
     "# Nhận dạng\n",
-    "- Fibonacci number\n",
+    "Bài toán có rất nhiều phương pháp để giải quyết có thể kể ra là đệ quy, quy hoạch động hay phương trình dãy số, vv... Ở đây nhóm xin trình bày phương pháp quy hoạch động `Dynamic Programming` để tối ưu về thời gian.\n",
     "\n",
     "# Thiết kế thuật toán\n",
     "\n",
-    "- Input: n (1 <= n <= 1000) \n",
-    "         k (1 <= k <= 10^18) \n",
+    "**_Input:_**\n",
+    "- Số cá thể ban đầu nằm trong đoạn $[1, 1000]$ ($1 \\le n \\le 1000$)\n",
+    "- Số ngày nằm trong đoạn $[1, 10^{18}]$ ($1 \\le k \\le 10^{18}$)\n",
     "\n",
-    "- Output: giá trị của phần tử thứ 2k trong mảng\n",
+    "**_Output:_**\n",
+    "- Số lượng cá thể tảo theo mô đun $10^9$+7.\n",
     "\n",
-    "- Thuật toán\n",
-    "    * Lặp biến i từ 0 đến 2k + 1\n",
-    "      - sum1 = n1 + n2\n",
-    "      - n1 = n2\n",
-    "      - n2 = sum1\n",
-    "      - n3 = n3 + 1  \n",
-    "      - Khi lặp xong, trả về n1\n",
+    "**1. Ý TƯỞNG:**\n",
     "\n",
-    "\n"
+    "Chúng ta cải tiến bài toán đệ quy bằng cách sử dụng vòng lặp để tính các số fibonacci rồi sau đó lưu lại vào mảng để lấy ra sử dụng. Tuy nhiên, ta cũng có thể cải tiến hơn bằng cách không lưu trữ n phần tử fibonacci nữa mà chỉ lưu 3 phần tử cần thiết.Cách này sẽ tiết kiệm độ phức tạp thời gian nhưng phải đánh đổi độ phức tạp bộ nhớ (quy hoạch động).\n",
+    "\n",
+    "**2. THUẬT TOÁN:**\n",
+    "\n",
+    "**_Pseudo code:_**\n",
+    "```\n",
+    "Lặp biến i từ 0 đến 2k + 1\n",
+    "    sum1 = n1 + n2\n",
+    "    n1 = n2\n",
+    "    n2 = sum1\n",
+    "    n3 = n3 + 1  \n",
+    "Khi lặp xong, trả về n1\n",
+    "```\n",
+    "Time complexity: O($n$)\n",
+    "\n",
+    "Space comfexity: O($1$)\n",
+    "\n",
+    "# Cài đặt"
    ]
   },
   {
@@ -60,20 +73,6 @@
     "m = 1000000007\n",
     "print(kq%m)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
