[update] header & details

--- a/Week 3/H_index.ipynb
+++ b/Week 3/H_index.ipynb
@@ -5,28 +5,28 @@
    "metadata": {},
    "source": [
     "# Tóm tắt\n",
-    "``` \n",
     "Tìm số k sao cho có k phần tử trong dãy lớn hơn hoặc bằng k\n",
     "\n",
-    "```\n",
-    "- Ràng buộc:\n",
-    "    * $n$ ($1 \\le n \\le 5*10^5$),\n",
-    "    * $c_1, c_2, . . ., c_n (0 \\le c_i \\le 10^6, $ $i$ = 1 / $n$ $  )$.\n",
-    "\n",
-    "\n",
     "# Nhận dạng\n",
-    "```\n",
-    "Sắp xếp\n",
-    "\n",
-    "```\n",
+    "Sắp xếp mảng và so sánh các phần tử trong mảng\n",
     "\n",
     "# Thiết kế thuật toán\n",
+    "**_Input:_**\n",
+    "- Dòng đầu tiên chứa một số nguyên $n$ ($1 \\le n \\le 5*10^5$),\n",
+    "- Dòng thứ 2 chứa n số nguyên $c_1, c_2, . . ., c_n (0 \\le c_i \\le 10^6, i = 1 ÷ n)$.\n",
+    "\n",
+    "**_Output:_**\n",
+    "- Một số nguyên – H_Index tìm được\n",
+    "\n",
+    "**Ý TƯỞNG:**\n",
+    "\n",
     "- Gọi dãy $A$ là dãy gồm các phần tử chỉ số lượng trích dẫn của bài báo và thực hiện sắp xếp giảm dần \n",
     "- Sau đó bắt đầu duyệt từ phần tử $A_0$.\n",
     "     * Tại mỗi vị trí thứ $i$ ta so sánh xem số lượng phần tử còn lại nhỏ hơn vị trí có giá trị phần tử tại vị trí thứ $i$ hay không. => Nếu có thì đó chính là $k$. \n",
+    "    \n",
     "- Độ phức tạp của giải thuật này là: $O(n \\log n)$\n",
     "\n",
-    "# Code"
+    "# Cài đặt"
    ]
   },
   {
