--- a/Week 3/WaterSupply.ipynb
+++ b/Week 3/WaterSupply.ipynb
@@ -6,14 +6,21 @@
    "source": [
     "# Tóm tắt\n",
     "\n",
-    "- Tìm số ống nước CẦN để các nhà vẫn được kết nối và tổng những trường hợp tối ưu đó\n",
+    "Tìm số ống nước CẦN để các nhà vẫn được kết nối và tổng những trường hợp tối ưu đó\n",
     "\n",
     "# Nhận dạng\n",
     "\n",
-    "- Đồ thị + toán hoán vị tổ hợp\n",
+    "Đồ thị + toán hoán vị tổ hợp\n",
     "\n",
     "# Thiết kế thuật toán\n",
+    "**_Input:_**\n",
+    "- Dòng đầu tiên chứa 2 số nguyên $N, M (1 \\le N, M  \\le 10^5)$\n",
+    "- Mỗi dòng trong M dòng tiếp theo chứa 2 số nguyên $a, b (1 \\le a,  b \\le N)$ cho biết vẫn còn đường ống nối nhà $a$ với nhà $b$\n",
     "\n",
+    "**_Output:_**\n",
+    "- Số đường ống cần được lắp thêm và số phương án đáp ứng yêu cầu(theo mô đun $10^9+7$)\n",
+    "\n",
+    "**1. Ý TƯỞNG:**\n",
     "- Giả sử ta có 7 nhà và sơ đồ đường ống nước chưa hư:\n",
     "```\n",
     "    3 === 4 === 1\n",
@@ -43,7 +50,7 @@
     "\n",
     "[ update 30/9 ] hoặc chúng ta quên đi những cái ở trên và đọc cái này https://vi.wikipedia.org/wiki/C%C3%A2y_bao_tr%C3%B9m\n",
     "\n",
-    "Hiện thực thuật toán:\n",
+    "**2. THUẬT TOÁN:**\n",
     "```\n",
     "> B1: biểu diễn đồ thị.\n",
     "> B2: cho ma trận đi qua thuật toán bfs/dfs ( hay cái gì đó ) để tìm ra các đỉnh được kết nối nhau\n",
