--- a/Week 4/Renew.ipynb
+++ b/Week 4/Renew.ipynb
@@ -7,44 +7,36 @@
     "# Tóm tắt\n",
     " Tìm x sao cho thỏa công thức bài toán đưa ra \n",
     "\n",
-    "\n",
     "# Nhận dạng \n",
-    " Toán học, tìm kiếm nhị phân\n",
-    "\n",
+    "Nhóm quyết định sử dụng toán học để tiến hành giải mã phương trình cũng như thực hiện phương pháp tìm kiếm nhị phân để bao quát điều kiện của bài toán.\n",
     "\n",
     "# Thiết kế thuật toán\n",
-    "1. Ý TƯỞNG\n",
+    "**_Input:_**\n",
+    "- Năm số nguyên $a, k, b, m$ và $n$ $(1 \\le a, b \\le 10^9, 2 \\le k, m \\le 10^{18}, 1 \\le n \\le 10^{18})$.\n",
+    "\n",
+    "**_Output:_**\n",
+    "- Một số nguyên – số ngày tính được\n",
+    "\n",
+    "**1. Ý TƯỞNG:**\n",
     "\n",
     "Trước tiên, ta phân tích bài toán một chút. Gọi $x$ là số ngày cần thiết để hoàn thành. Khi đó, số ngày nghỉ của đội $I$ là $\\frac{x}{k}$. Từ đây ta có thể suy ra:\n",
     "\n",
     "- Số ngày làm là $x-\\frac{x}{k}$.\n",
-    "\n",
     "- Sô cây đốn hạ được là $(x-\\frac{x}{k}) \\times a$.\n",
     "\n",
     "Tương tự với đội $II$, ta có số cây đốn hạ được là $(x-\\frac{x}{m}) \\times b$ \n",
     "\n",
     "Vậy yêu cầu của bài toán là tìm số ngày $S(x)$ với $S(x) = $($x-\\frac{x}{k}$) $\\times a$ + ($x-\\frac{x}{m}$) $\\times b$.\n",
     "\n",
-    "\n",
-    "\n",
-    "Yêu cầu:\n",
-    "- $1 \\le a, b \\le 10^9. $\n",
-    "- $2 \\le k, m \\le 10^{18}. $\n",
-    "- $1 \\le n \\le 10^{18}. $\n",
-    "- $a, k, b, m, n \\in \\mathbb{N}.$\n",
-    "\n",
-    "\n",
-    "2. THUẬT TOÁN\n",
+    "**2. THUẬT TOÁN:**\n",
     "\n",
     "Sử dụng tìm kiếm nhị phân: \n",
     "- Khởi tạo low, high là đoạn ta cần tìm.\n",
     "   * Nếu S[mid] $\\geqslant$ $n$ (với mid là vị trí giữa của đoạn từ low đến high), ta tiếp tục tìm trong đoạn từ low đến mid.\n",
     "   * Nếu S[mid] $\\le$ $n$ tức là các phần tử từ low đến mid đều không thỏa thì ta tiếp tục tìm trong đoạn từ mid + 1 đến high.\n",
-    "\n",
     "- Độ phức tạp thuật toán là ${O(log(n))}.$\n",
     "\n",
-    "Pseudocode:\n",
-    "\n",
+    "**_Pseudo code:_**\n",
     "```\n",
     "initialize low, high\n",
     "loop:\n",
@@ -53,7 +45,9 @@
     "        find low->mid\n",
     "    else:\n",
     "        find (mid+1)->high\n",
-    "```"
+    "```\n",
+    "\n",
+    "# Cài đặt"
    ]
   },
   {
