[update] add problem

--- a/Week 1/BOT.ipynb
+++ b/Week 1/BOT.ipynb
@@ -4,6 +4,51 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Đề bài\n",
+    "\n",
+    "<p style=\"text-align:justify\"><strong><span style=\"background-color:white\"><span style=\"color:#252525\">BOT</span></span></strong><span style=\"background-color:white\"><span style=\"color:#252525\">&nbsp;(<em>Built-Operation-Transfer</em>, có nghĩa: Xây dựng-Vận hành-Chuyển giao) là hình thức Chính phủ kêu gọi các công ty bỏ vốn xây dựng trước (<em>Built</em>) thông qua đấu thầu, sau đó khai thác vận hành một thời gian (<em>Operation</em>) và sau cùng là chuyển giao (<em>Transfer</em>) lại cho nhà nước sở tại.</span></span></p>\n",
+    "\n",
+    "<p style=\"text-align:justify\"><span style=\"background-color:white\"><span style=\"color:#252525\">Đường cao tốc xuyên quốc gia được xây dựng theo hình thức BOT. Công ty Đa quốc gia <em>Modern Highway</em> trúng thầu, chia toàn bộ con đường thành </span></span><strong><em><span style=\"background-color:white\"><span style=\"color:#252525\">n</span></span></em></strong><span style=\"background-color:white\"><span style=\"color:#252525\"> đoạn. Theo tính toán của Công ty sau khi chuyển giao con đường cho chính phủ sở tại quản lý thì lãi thu được ở đoạn đường thứ </span></span><strong><em><span style=\"background-color:white\"><span style=\"color:#252525\">i</span></span></em></strong><span style=\"background-color:white\"><span style=\"color:#252525\"> là </span></span><strong><em><span style=\"background-color:white\"><span style=\"color:#252525\">a<sub>i</sub></span></span></em></strong><span style=\"background-color:white\"><span style=\"color:#252525\">, </span></span><strong><em><span style=\"background-color:white\"><span style=\"color:#252525\">a<sub>i</sub></span></span></em></strong><span style=\"background-color:white\"><span style=\"color:#252525\"> có thể dương, âm hoặc bằng 0, tức là với từng đoạn con có thể lãi, lỗ hoặc hòa vốn. Từng nhóm các đoạn đường liên tiếp nhau (gọi tắt là khoảng) được chia cho các công ty con thực hiện. Công ty con <em>ASEAM Highway</em> hiện đang có trụ sở ở nước sở tại được quyền chọn trước khoảng tùy ý (có thể là cả con đường). </span></span></p>\n",
+    "\n",
+    "<p style=\"text-align:justify\"><span style=\"background-color:white\"><span style=\"color:#252525\">Dĩ nhiên Ban Giám đốc <em>ASEAM Highway </em>muốn chọn khoảng bắt đầu từ đoạn </span></span><strong><em><span style=\"background-color:white\"><span style=\"color:#252525\">p</span></span></em></strong><span style=\"background-color:white\"><span style=\"color:#252525\"> đến hết đoạn </span></span><strong><em><span style=\"background-color:white\"><span style=\"color:#252525\">q</span></span></em></strong><span style=\"background-color:white\"><span style=\"color:#252525\"> mang lại lợi nhuận cao nhất hoặc lỗ ít nhất nếu không có khoảng nào cho lãi.</span></span></p>\n",
+    "\n",
+    "<p style=\"text-align:justify\"><span style=\"background-color:white\"><span style=\"color:#252525\">Hãy chỉ ra khoảng cần chọn và lãi thu được. Nếu có nhiều cách chọn thì chỉ ra cách chọn có </span></span><strong><em><span style=\"background-color:white\"><span style=\"color:#252525\">p</span></span></em></strong><span style=\"background-color:white\"><span style=\"color:#252525\"> nhỏ nhất.</span></span></p>\n",
+    "\n",
+    "<p style=\"text-align:justify\"><strong><em>Dữ liệu:</em></strong><span style=\"background-color:white\"><span style=\"color:#252525\"> Vào từ thiết bị nhập chuẩn:</span></span></p>\n",
+    "\n",
+    "<ul>\n",
+    "\t<li style=\"text-align:justify\"><span style=\"background-color:white\"><span style=\"color:#252525\">Dòng đầu tiên chứa số nguyên </span></span><strong><em><span style=\"background-color:white\"><span style=\"color:#252525\">n</span></span></em></strong><span style=\"background-color:white\"><span style=\"color:#252525\"> (1 ≤ </span></span><strong><em><span style=\"background-color:white\"><span style=\"color:#252525\">n</span></span></em></strong><span style=\"background-color:white\"><span style=\"color:#252525\"> ≤ 10<sup>6</sup>), </span></span></li>\n",
+    "\t<li style=\"text-align:justify\"><span style=\"background-color:white\"><span style=\"color:#252525\">Dòng thứ 2 chứa </span></span><strong><em><span style=\"background-color:white\"><span style=\"color:#252525\">n</span></span></em></strong><span style=\"background-color:white\"><span style=\"color:#252525\"> số nguyên </span></span><strong><em><span style=\"background-color:white\"><span style=\"color:#252525\">a<sub>1</sub></span></span></em></strong><span style=\"background-color:white\"><span style=\"color:#252525\">, </span></span><strong><em><span style=\"background-color:white\"><span style=\"color:#252525\">a<sub>2</sub></span></span></em></strong><span style=\"background-color:white\"><span style=\"color:#252525\">, . . ., </span></span><strong><em><span style=\"background-color:white\"><span style=\"color:#252525\">a<sub>n</sub></span></span></em></strong><span style=\"background-color:white\"><span style=\"color:#252525\"> (0 ≤ |</span></span><strong><em><span style=\"background-color:white\"><span style=\"color:#252525\">a<sub>i</sub></span></span></em></strong><span style=\"background-color:white\"><span style=\"color:#252525\">| ≤ 10<sup>9</sup>, </span></span><strong><em><span style=\"background-color:white\"><span style=\"color:#252525\">i</span></span></em></strong><span style=\"background-color:white\"><span style=\"color:#252525\"> = 1 ÷ </span></span><strong><em><span style=\"background-color:white\"><span style=\"color:#252525\">n</span></span></em></strong><span style=\"background-color:white\"><span style=\"color:#252525\">).</span></span></li>\n",
+    "</ul>\n",
+    "\n",
+    "<p style=\"text-align:justify\"><strong><em>Kết quả:</em></strong><span style=\"background-color:white\"><span style=\"color:#252525\"> Đưa ra thiết bị xuất chuẩn trên một dòng 2 số nguyên </span></span><strong><em><span style=\"background-color:white\"><span style=\"color:#252525\">p</span></span></em></strong><span style=\"background-color:white\"><span style=\"color:#252525\">, </span></span><strong><em><span style=\"background-color:white\"><span style=\"color:#252525\">q</span></span></em></strong><span style=\"background-color:white\"><span style=\"color:#252525\"> và lãi thu được.</span></span></p>\n",
+    "\n",
+    "<p style=\"text-align:justify\"><strong><em>Ví dụ:</em></strong></p>\n",
+    "\n",
+    "<table border=\"1\" bordercolor=\"#ccc\" cellpadding=\"5\" cellspacing=\"0\" style=\"border-collapse:collapse\">\n",
+    "\t<tbody>\n",
+    "\t\t<tr>\n",
+    "\t\t\t<td style=\"background-color:#ffffcc; border-color:black; width:288.0pt\">\n",
+    "\t\t\t<p style=\"text-align:center\"><tt>INPUT</tt></p>\n",
+    "\t\t\t</td>\n",
+    "\t\t\t<td style=\"background-color:#ffffcc; border-color:black; width:99.0pt\">\n",
+    "\t\t\t<p style=\"text-align:center\"><tt>OUTPUT</tt></p>\n",
+    "\t\t\t</td>\n",
+    "\t\t</tr>\n",
+    "\t\t<tr>\n",
+    "\t\t\t<td rowspan=\"2\" style=\"background-color:#ffffcc; border-color:black; height:16.6pt; width:288.0pt\">\n",
+    "\t\t\t<p><tt><strong>16</strong></tt></p>\n",
+    "\t\t\t<p><tt><strong>2 -4 5 -8 4 -1 -1 1 1 1 -2 2 4 -6 9 -4</strong></tt></p>\n",
+    "\t\t\t</td>\n",
+    "\t\t\t<td style=\"background-color:#ffffcc; height:16.6pt; width:99.0pt\">\n",
+    "\t\t\t<p><tt><strong>5 15 12</strong></tt></p>\n",
+    "\t\t\t</td>\n",
+    "\t\t</tr>\n",
+    "\t</tbody>\n",
+    "</table>\n",
+    "\n",
+    "<p>&nbsp;</p>\n",
+    "\n",
     "# Tóm tắt\n",
     "\n",
     "Tìm dãy con liên tiếp có tổng lớn nhất\n",
