--- a/Week 2/SeaWeed.ipynb
+++ b/Week 2/SeaWeed.ipynb
@@ -4,6 +4,56 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Đề bài\n",
+    "<p style=\"text-align:justify\"><span style=\"color:black\">Tảo biển sinh sản rất nhanh khi có môi trường thuận lợi với chúng và có những loài còn tiết ra môi trường những chất độc hại. </span></p>\n",
+    "\n",
+    "<p style=\"text-align:justify\"><span style=\"color:black\">Một loại tảo nâu trong môi trường nước bị ô nhiễm nặng sinh sản theo quy luật sau:</span></p>\n",
+    "\n",
+    "<ul>\n",
+    "\t<li style=\"text-align:justify\"><span style=\"color:black\">Ngày đầu tiên (ngày 0) có </span><strong><em><span style=\"color:black\">n</span></em></strong><span style=\"color:black\"> cá thể ở mức 1,</span></li>\n",
+    "\t<li style=\"text-align:justify\"><span style=\"color:black\">Ở mỗi ngày tiếp theo, mỗi cá thể mức </span><strong><em><span style=\"color:black\">i</span></em></strong><span style=\"color:black\"> sinh ra </span><strong><em><span style=\"color:black\">i</span></em></strong><span style=\"color:black\"> cá thể mức 1, các cá thể mới sinh sẽ sinh sôi, phát triển từ ngày hôm sau.</span></li>\n",
+    "\t<li style=\"text-align:justify\"><span style=\"color:black\">Bản thân các cá thể mức </span><strong><em><span style=\"color:black\">i</span></em></strong><span style=\"color:black\"> phát triển thành mức </span><strong><em><span style=\"color:black\">i</span></em></strong><span style=\"color:black\">+1 và chu kỳ phát triển trong ngày chấm dứt.</span></li>\n",
+    "</ul>\n",
+    "\n",
+    "<p style=\"text-align:justify\"><span style=\"color:black\">Hãy xác định sau </span><strong><em><span style=\"color:black\">k</span></em></strong><span style=\"color:black\"> ngày trong nước biển có bao nhiêu cá thể.</span></p>\n",
+    "\n",
+    "<p style=\"text-align:justify\"><strong><em><span style=\"color:black\">Dữ liệu:</span></em></strong><span style=\"color:black\"> Vào từ thiết bị nhập chuẩn gồm một dòng chứa 2 số nguyên </span><strong><em><span style=\"color:black\">n</span></em></strong><span style=\"color:black\"> và </span><strong><em><span style=\"color:black\">k</span></em></strong><span style=\"color:black\"> (1 ≤ </span><strong><em><span style=\"color:black\">n</span></em></strong><span style=\"color:black\"> ≤ 1000, 1 ≤ </span><strong><em><span style=\"color:black\">k</span></em></strong><span style=\"color:black\"> ≤ </span>10<sup>17</sup><span style=\"color:black\">).</span></p>\n",
+    "\n",
+    "<p style=\"text-align:justify\">(test hiện tại chỉ có <em><strong>k</strong></em> &lt;= 10<sup>5</sup>,&nbsp; thầy sẽ chấm lại sau khi nâng cấp test)</p>\n",
+    "\n",
+    "<p style=\"text-align:justify\"><strong><em><span style=\"color:black\">Kết quả:</span></em></strong><span style=\"color:black\"> Đưa ra thiết bị xuất chuẩn một số nguyên – số lượng cá thể&nbsp; tảo theo mô đun 10<sup>9</sup>+7.</span></p>\n",
+    "\n",
+    "<p style=\"text-align:justify\"><strong><em><span style=\"color:black\">Ví dụ:</span></em></strong></p>\n",
+    "\n",
+    "<table border=\"1\" cellspacing=\"0\" style=\"background-color:#e6e6fa; border-style:hidden\">\n",
+    "\t<tbody>\n",
+    "\t\t<tr>\n",
+    "\t\t\t<td style=\"background-color:#ffffcc; width:63.0pt\">\n",
+    "\t\t\t<pre><code><tt><kbd>INPUT      </kbd></tt></code></pre>\n",
+    "\t\t\t</td>\n",
+    "\t\t\t<td style=\"vertical-align:top; width:58.5pt\">\n",
+    "\t\t\t\n",
+    "&nbsp;</pre>\n",
+    "\t\t\t</td>\n",
+    "\t\t\t<td style=\"background-color:#ffffcc; width:67.5pt\">\n",
+    "\t\t\t<pre><code><tt><kbd>OUTPUT       </kbd></tt></code></pre>\n",
+    "\t\t\t</td>\n",
+    "\t\t</tr>\n",
+    "\t\t<tr>\n",
+    "\t\t\t<td style=\"background-color:#ffffcc; width:63.0pt\">\n",
+    "\t\t\t<pre><code><tt><kbd><strong>3 2      </strong></kbd></tt></code></pre>\n",
+    "\t\t\t</td>\n",
+    "\t\t\t<td style=\"vertical-align:top; width:58.5pt\">\n",
+    "\t\t\t\n",
+    "&nbsp;</pre>\n",
+    "\t\t\t</td>\n",
+    "\t\t\t<td style=\"background-color:#ffffcc; width:67.5pt\">\n",
+    "\t\t\t<pre><code><tt><kbd><strong>15      </strong></kbd></tt></code></pre>\n",
+    "\t\t\t</td>\n",
+    "\t\t</tr>\n",
+    "\t</tbody>\n",
+    "</table>\n",
+    "\n",
     "# Tóm tắt\n",
     "Cho dãy số Fibonacci tại n, tìm phần tử thứ 2k+1 của dãy số\n",
     "\n",
@@ -43,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -73,6 +123,13 @@
     "m = 1000000007\n",
     "print(kq%m)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
