--- a/Week 3/WaterSupply.ipynb
+++ b/Week 3/WaterSupply.ipynb
@@ -4,6 +4,62 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Đề bài\n",
+    "\n",
+    "<p style=\"text-align:justify\"><span style=\"background-color:transparent; color:#000000\">Vùng đất diệu kỳ Wonderland có </span><strong><em>N</em></strong><span style=\"background-color:transparent; color:#000000\"> hộ gia đình đã được trang bị một hệ thống cung cấp nước sạch đến từng ngôi nhà. Mỗi đường ống nối trực tiếp 2 nhà, nước chảy trong đường ống theo 2 chiều, có thể truyền qua nhiều trung gian trước khi đến một nhà nào đó. Trong hồ sơ lưu trữ, các ngôi nhà được ghi số từ 1 đến </span><strong><em>N</em></strong><span style=\"background-color:transparent; color:#000000\">.</span></p>\n",
+    "\n",
+    "<p style=\"text-align:justify\"><span style=\"background-color:transparent; color:#000000\">Một trận động đất đã gây nên sự cố nghiêm trọng làm cho cả vùng bị chia cắt thành nhiều khu vực rời nhau, không còn tiếp cận được với nguồn nước. Để khắc phục, những người có trách nhiệm đã khảo sát hiện trạng và ghi nhận được toàn vùng đất đang thảm họa vẫn còn </span><strong><em>M</em></strong><span style=\"background-color:transparent; color:#000000\"> đường ống đang hoạt động tốt. </span></p>\n",
+    "\n",
+    "<p style=\"text-align:justify\"><span style=\"background-color:transparent; color:#000000\">Nhiệm vụ đặt ra là phải khôi phục hệ thống cấp nước bằng cách lắp thêm một số đường ống. Tuy nhiên, do hạn chế về thời gian và kinh phí nên đòi hỏi </span><em>phương án khôi phục phải được thực hiện với ít đường ống được lắp thêm nhất</em><span style=\"background-color:transparent; color:#000000\">. Câu hỏi đặt ra: cần lắp thêm ít nhất bao nhiêu đường ống để hệ thống cấp nước có thể đưa nước đến từng ngôi nhà. Câu hỏi phụ: có bao nhiêu phương án khác nhau đáp ứng yêu cầu; số phương án có thể khá lớn nên chỉ cần đưa ra số dư khi chia cho 10<sup>9</sup>+7.</span></p>\n",
+    "\n",
+    "<p style=\"text-align:justify\"><em>Dữ liệu:</em><span style=\"background-color:transparent; color:#000000\"> Vào từ thiết bị nhập chuẩn:</span></p>\n",
+    "\n",
+    "<ul>\n",
+    "\t<li>\n",
+    "\t<p style=\"text-align:justify\"><span style=\"background-color:transparent; color:#000000\">Dòng đầu tiên chứa 2 số nguyên <em><strong>N</strong></em>, <em><strong>M</strong></em> (1 ≤ </span><em><strong>N</strong>, <strong>M</strong></em><em> </em><span style=\"background-color:transparent; color:#000000\">&nbsp;≤ 10</span><sup><span style=\"background-color:transparent; color:#000000\">5</span></sup><span style=\"background-color:transparent; color:#000000\">)</span></p>\n",
+    "\t</li>\n",
+    "\t<li>\n",
+    "\t<p style=\"text-align:justify\"><span style=\"background-color:transparent; color:#000000\">Mỗi dòng trong </span><strong><em>M</em></strong><span style=\"background-color:transparent; color:#000000\"> dòng tiếp theo chứa 2 số nguyên </span><strong><em>a</em></strong><span style=\"background-color:transparent; color:#000000\">, </span><strong><em>b</em></strong><span style=\"background-color:transparent; color:#000000\"> (1 ≤ </span><em><strong>a</strong>,</em><span style=\"background-color:transparent; color:#000000\"> &nbsp;</span><strong><em>b</em></strong><span style=\"background-color:transparent; color:#000000\"> ≤ </span><strong><em>N</em></strong><span style=\"background-color:transparent; color:#000000\">). cho biết vẫn còn đường ống nối nhà </span><strong><em>a</em></strong><span style=\"background-color:transparent; color:#000000\"> với nhà </span><strong><em>b</em></strong></p>\n",
+    "\t</li>\n",
+    "</ul>\n",
+    "\n",
+    "<p style=\"text-align:justify\"><em>Kết quả:</em><span style=\"background-color:transparent; color:#000000\"> Đưa ra thiết bị xuất chuẩn số đường ống cần được lắp thêm và số phương án đáp ứng yêu cầu (theo mô đun 10</span><sup><span style=\"background-color:transparent; color:#000000\">9</span></sup><span style=\"background-color:transparent; color:#000000\">+7) mỗi số trên một dòng.</span></p>\n",
+    "\n",
+    "<p style=\"text-align:justify\"><em>Dữ liệu mẫu:</em></p>\n",
+    "\n",
+    "<table border=\"1\" bordercolor=\"#ccc\" cellpadding=\"5\" cellspacing=\"0\" style=\"border-collapse:collapse\">\n",
+    "\t<tbody>\n",
+    "\t\t<tr>\n",
+    "\t\t\t<td style=\"background-color:#fff2cc; height:24pt; vertical-align:top\">\n",
+    "\t\t\t<p style=\"text-align:center\"><tt><span style=\"background-color:transparent; color:#000000\">INPUT</span></tt></p>\n",
+    "\t\t\t</td>\n",
+    "\t\t\t<td style=\"height:24pt; vertical-align:top\">\n",
+    "\t\t\t<p style=\"text-align:center\">&nbsp;</p>\n",
+    "\t\t\t</td>\n",
+    "\t\t\t<td style=\"background-color:#fff2cc; height:24pt; vertical-align:top\">\n",
+    "\t\t\t<p style=\"text-align:center\"><tt><span style=\"background-color:transparent; color:#000000\">OUTPUT</span></tt></p>\n",
+    "\t\t\t</td>\n",
+    "\t\t</tr>\n",
+    "\t\t<tr>\n",
+    "\t\t\t<td rowspan=\"2\" style=\"background-color:#fff2cc; height:40pt; vertical-align:top\">\n",
+    "\t\t\t<p><tt><strong>3 1</strong></tt></p>\n",
+    "\t\t\t<p><tt><strong>1 2</strong></tt></p>\n",
+    "\t\t\t</td>\n",
+    "\t\t\t<td rowspan=\"2\" style=\"height:40pt; vertical-align:top\">\n",
+    "\t\t\t<p>&nbsp;</p>\n",
+    "\t\t\t</td>\n",
+    "\t\t\t<td rowspan=\"2\" style=\"background-color:#fff2cc; height:40pt; vertical-align:top\">\n",
+    "\t\t\t<p><tt><strong>1</strong></tt></p>\n",
+    "\t\t\t<p><tt><strong>2</strong></tt></p>\n",
+    "\t\t\t</td>\n",
+    "\t\t</tr>\n",
+    "\t\t<tr>\n",
+    "\t\t</tr>\n",
+    "\t</tbody>\n",
+    "</table\n",
+    "<p>&nbsp;</p>\n",
+    "\n",
+    "\t\t\n",
     "# Tóm tắt\n",
     "\n",
     "Tìm số ống nước CẦN để các nhà vẫn được kết nối và tổng những trường hợp tối ưu đó\n",
