--- a/Week 3/H_index.ipynb
+++ b/Week 3/H_index.ipynb
@@ -4,6 +4,63 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Đề bài\n",
+    "\n",
+    "<p style=\"text-align:justify\">Làm thế nào để đánh giá sự thành công của một nhà khoa học?&nbsp; Dựa vào số bài báo được công bố hay dựa vào số lần một bài báo được trích dẫn tới ở công trình của những người khác? Cả hai tham số đó đều quan trọng.</p>\n",
+    "\n",
+    "<p style=\"text-align:justify\">Một bài báo có điểm số trích dẫn là <strong><em>c</em></strong> nếu nó được trích dẫn tới <strong><em>c</em></strong> lần trong các công trình của những nhà khoa học khác. Một trong số các cách đánh giá sự thành công của một nhà khoa học là tính chỉ số ảnh hưởng <strong><em>H_Index</em></strong> dựa trên sự kết hợp giữa số lượng bài báo và chỉ số trích dẫn của các bài báo đó.</p>\n",
+    "\n",
+    "<p style=\"text-align:justify\">Chỉ số <strong><em>H_Index</em></strong>của một nhà khoa học bằng <strong><em>k</em></strong> lớn nhất nếu người đó có <strong><em>k</em></strong> bài báo, mỗi bài có điểm số trích dẫn không nhỏ hơn <strong><em>k</em></strong>. Ví dụ, một người có 10 bài báo, mỗi bài báo được trích dẫn không dưới 10 lần thì <strong><em>H_Index</em></strong> của người đó ít nhất là bằng 10.</p>\n",
+    "\n",
+    "<p style=\"text-align:justify\">Một người có <strong><em>n</em></strong> bài báo, bài báo thứ <strong><em>i</em></strong> có điểm trích dẫn là <strong><em>c<sub>i</sub></em></strong>, <strong><em>i</em></strong> = 1 ÷ <strong><em>n</em></strong>. Hãy xác định <strong><em>H_Index</em></strong> của người đó.</p>\n",
+    "\n",
+    "<p style=\"text-align:justify\"><strong><em>Dữ liệu:</em></strong> Vào từ thiết bị nhập chuẩn:</p>\n",
+    "\n",
+    "<ul>\n",
+    "\t<li style=\"text-align:justify\">Dòng đầu tiên chứa một số nguyên <strong><em>n</em></strong> (1 ≤ <strong><em>n</em></strong> ≤ 5×10<sup>5</sup>),</li>\n",
+    "\t<li style=\"text-align:justify\">Dòng thứ 2 chứa <strong><em>n</em></strong> số nguyên <strong><em>c<sub>1</sub></em></strong>, <strong><em>c<sub>2</sub></em></strong>, . . ., <strong><em>c<sub>n</sub></em></strong> (0 ≤ <strong><em>c<sub>i</sub></em></strong> ≤ 10<sup>6</sup>, <strong><em>i</em></strong> = 1 ÷ <strong><em>n</em></strong>).</li>\n",
+    "</ul>\n",
+    "\n",
+    "<p style=\"text-align:justify\"><strong><em>Kết quả:</em></strong> Đưa ra thiết bị xuất chuẩn một số nguyên – <strong><em>H_Index</em></strong> tìm được.</p>\n",
+    "\n",
+    "<p style=\"text-align:justify\"><strong><em>Ví dụ: </em></strong></p>\n",
+    "\n",
+    "<p>&nbsp;</p>\n",
+    "\n",
+    "<table border=\"1\" cellspacing=\"0\">\n",
+    "\t<tbody>\n",
+    "\t\t<tr>\n",
+    "\t\t\t<td style=\"background-color:#fff2cc; width:99.0pt\">\n",
+    "\t\t\t<p style=\"text-align:center\"><tt>INPUT</tt></p>\n",
+    "\t\t\t</td>\n",
+    "\t\t\t<td style=\"vertical-align:top; width:40.5pt\">\n",
+    "\t\t\t<p style=\"text-align:center\">&nbsp;</p>\n",
+    "\t\t\t</td>\n",
+    "\t\t\t<td style=\"background-color:#fff2cc; width:96.5pt\">\n",
+    "\t\t\t<p style=\"text-align:center\"><tt>OUTPUT</tt></p>\n",
+    "\t\t\t</td>\n",
+    "\t\t</tr>\n",
+    "\t\t<tr>\n",
+    "\t\t\t<td rowspan=\"2\" style=\"background-color:#fff2cc; height:16.9pt; width:99.0pt\">\n",
+    "\t\t\t<p><tt><strong>5</strong></tt></p>\n",
+    "\t\t\t<p><tt><strong>8 5 3 4 10</strong></tt></p>\n",
+    "\t\t\t</td>\n",
+    "\t\t\t<td rowspan=\"2\" style=\"height:16.9pt; vertical-align:top; width:40.5pt\">\n",
+    "\t\t\t<p>&nbsp;</p>\n",
+    "\t\t\t</td>\n",
+    "\t\t\t<td style=\"background-color:#fff2cc; height:16.9pt; width:96.5pt\">\n",
+    "\t\t\t<p><tt><strong>4</strong></tt></p>\n",
+    "\t\t\t</td>\n",
+    "\t\t</tr>\n",
+    "\t\t<tr>\n",
+    "\t\t\t<td style=\"height:10.3pt; vertical-align:bottom; width:96.5pt\">&nbsp;</td>\n",
+    "\t\t</tr>\n",
+    "\t</tbody>\n",
+    "</table>\n",
+    "\n",
+    "<p>&nbsp;</p>\n",
+    "\n",
+    "\t\t\n",
     "# Tóm tắt\n",
     "Tìm số k sao cho có k phần tử trong dãy lớn hơn hoặc bằng k\n",
     "\n",
