--- a/Week 3/WaterSupply.ipynb
+++ b/Week 3/WaterSupply.ipynb
@@ -56,10 +56,10 @@
     "\t\t<tr>\n",
     "\t\t</tr>\n",
     "\t</tbody>\n",
-    "</table\n",
+    "</table>\n",
+    "\n",
     "<p>&nbsp;</p>\n",
     "\n",
-    "\t\t\n",
     "# Tóm tắt\n",
     "\n",
     "Tìm số ống nước CẦN để các nhà vẫn được kết nối và tổng những trường hợp tối ưu đó\n",
