[add] PhanSo.py

--- a/Week 8/PhanSo.ipynb
+++ b/Week 8/PhanSo.ipynb
@@ -84,6 +84,49 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "6\n",
+      "2\n",
+      "3\n",
+      "5\n"
+     ]
+    }
+   ],
+   "source": [
+    "from math import gcd \n",
+    "\n",
+    "a = int(input())\n",
+    "b = int(input())\n",
+    "c = int(input())\n",
+    "d = int(input())\n",
+    "count = 0\n",
+    "temp = c/d\n",
+    "\n",
+    "\n",
+    "while (a/b < temp): \n",
+    "    a += 1\n",
+    "    b += 1\n",
+    "    count += 1\n",
+    "    \n",
+    "    ucln = gcd(a,b)\n",
+    "    a = a // ucln\n",
+    "    b = b // ucln\n",
+    "    \n",
+    "if (a/b > temp):\n",
+    "    print(0)\n",
+    "else:\n",
+    "    print(count)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
