--- a/Week 8/PhanSo.ipynb
+++ b/Week 8/PhanSo.ipynb
@@ -48,7 +48,7 @@
     "Tìm số lần biến đổi từ phân số 1 thành phân số 2\n",
     "\n",
     "# Nhận dạng\n",
-    "Tìm ước chung lớn nhất\n",
+    "Brute Force\n",
     "\n",
     "\n",
     "# Thiết kế thuật toán\n",
@@ -69,14 +69,15 @@
     "**_Pseudo code:_**\n",
     "```\n",
     "Khởi tạo:\n",
-    "  count = 0\n",
+    "    count = 0\n",
     "Chương trình chính:\n",
-    "  1.Lặp cho đến khi a/b < c/d\n",
-    "   1.1 Cộng thêm 1 cho a và b\n",
-    "   1.2 Cộng thêm 1 cho biến count\n",
-    "   1.3 Tìm ước chung lớn nhất(UCLN) của a và b\n",
-    "   1.4 Chia a và b cho UCLN vừa tìm được, nếu a/b > c/d thì count sẽ bằng 0\n",
-    "In ra kết quả count\n",
+    "    Lặp cho đến khi a/b < c/d\n",
+    "        1.Thêm 1 vào a\n",
+    "        2.Thêm 1 vào b\n",
+    "        3.Thêm 1 vào biến đếm count\n",
+    "        4.Tìm ước chung lớn nhất(UCLN) của a và b\n",
+    "        5.Chia a và b cho UCLN vừa tìm được, nếu a/b > c/d thì xuất 0, ngược lại sẽ xuất giá trị biến count.\n",
+    "In ra kết quả biến count\n",
     "```\n",
     "\n",
     "# Cài đặt"
@@ -106,6 +107,7 @@
     "b = int(input())\n",
     "c = int(input())\n",
     "d = int(input())\n",
+    "\n",
     "count = 0\n",
     "temp = c/d\n",
     "\n",
