--- a/Week 9/NewInt.ipynb
+++ b/Week 9/NewInt.ipynb
@@ -48,7 +48,10 @@
     "Tìm số nguyên dương $m$ từ số $n$ sao cho $m$ chia hết cho 3 và khác $n$ đúng một chữ số\n",
     "\n",
     "# Nhận dạng\n",
-    "\n",
+    "Như theo đề bài, ta cần giải quyết 3 vấn đề:\n",
+    "- $m$ chia hết cho 3.\n",
+    "- $m$ chỉ khác $n$ ở một chữ số.\n",
+    "- $m$ lớn nhất có thể\n",
     "\n",
     "\n",
     "# Thiết kế thuật toán\n",
