--- a/Week 10/LED.ipynb
+++ b/Week 10/LED.ipynb
@@ -47,7 +47,7 @@
     "</table>\n",
     "\n",
     "<p style=\"text-align:justify\">&nbsp;</p>\n",
-    "</div></div>\n",
+    "\n",
     "\n",
     "\n",
     "# Tóm tắt\n",
@@ -72,9 +72,9 @@
     "\n",
     "Ta xét 4 trường hợp sau đây:\n",
     "- Với 2 3 và 4 ống, ta chỉ có thể bật sáng các số lần lượt là 1 7 và 4. Ở đây ta thấy số 7 là số lớn nhất nhưng sử dụng số ống khá ít là 3 ống. Đây là tiền đề cho những trường hợp và kết luận sẽ đề cập phía sau.\n",
-    "- Với 5 ống, tuy có thể bật sáng số 5 nhưng ta thấy ta có thể chia 5 ống thành 2 và 3 ống để lần lượt bật sáng số 1 và số 7. Như thế ta sẽ có $1 + 7 = 8 > 5$ đạt tổng lớn nhất.\n",
-    "- Tương tự với 6 ống, ta có thể bật sáng 2 số 7 vì $7 + 7 = 14 > 9$\n",
-    "- Tương tự với 7 ống, ta có thể bật sáng 1 số 7 và 1 số 4 vì $7 + 4 = 11 > 8$\n",
+    "- Với 5 ống, tuy có thể bật sáng số 5 nhưng ta thấy ta có thể chia 5 ống thành 2 và 3 ống để lần lượt bật sáng số 1 và số 7. Như thế ta sẽ có $1 + 7 = 8$ > $5$ đạt tổng lớn nhất.\n",
+    "- Tương tự với 6 ống, ta có thể bật sáng 2 số 7 vì $7 + 7 = 14$ > $9$\n",
+    "- Tương tự với 7 ống, ta có thể bật sáng 1 số 7 và 1 số 4 vì $7 + 4 = 11$ > $8$\n",
     "\n",
     "Từ đây ra rút ra quy luật như sau: với số ống là $n$, thương là $x$ = $n$ // 3 và phần dư là $r$ = $n$ % 3\n",
     "- Nếu r = 0, ta có tổng lớn nhất là $S$ = $x$ * 7\n",
@@ -82,6 +82,7 @@
     "- Nếu r = 2, ta có tổng lớn nhất là $S$ = $x$ * 7 + 1\n",
     "\n",
     "**2. THUẬT TOÁN:**\n",
+    "\n",
     "**_Pseudo code:_**\n",
     "```\n",
     "Khởi tạo: \n",
