[ edit ] ma di tuan format

--- a/DoAn/ma_di_tuan.ipynb
+++ b/DoAn/ma_di_tuan.ipynb
@@ -44,26 +44,17 @@
     "\t\t\t<td style=\"vertical-align:top; width:50%\"><tt>0</tt></td>\n",
     "\t\t</tr>\n",
     "\t</tbody>\n",
-    "</table>\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "</table>\n",
+    "\n",
+    "    \n",
     "# CƠ SỞ LÝ THUYẾT:\n",
     "\n",
     "## định lý Schwenk:\n",
     "https://vi.wikipedia.org/wiki/B%C3%A0i_to%C3%A1n_m%C3%A3_%C4%91i_tu%E1%BA%A7n\n",
     "\n",
     "## Mục tiêu của bài toán:\n",
-    "Xác định có tồn tại hành trình đóng trên bàn cờ hay là không."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "Xác định có tồn tại hành trình đóng trên bàn cờ hay là không.\n",
+    "    \n",
     "# Lý do nhóm chọn bài tập như thế này:\n",
     "1. Mã đi tuần là một bài toán quen thuộc nên khi nhìn vào người làm bài sẽ không thấy nản\n",
     "2. Có thể giải mã đi tuần bằng phương pháp BFS, chia để trị tức là bài toán này có thể giải với nhiều phương pháp.\n",
