[ edit ] ma di tuan format

--- a/DoAn/ma_di_tuan.ipynb
+++ b/DoAn/ma_di_tuan.ipynb
@@ -45,7 +45,7 @@
     "\t\t</tr>\n",
     "\t</tbody>\n",
     "</table>\n",
-    "\n",
+    "</div>\n",
     "    \n",
     "# CƠ SỞ LÝ THUYẾT:\n",
     "\n",
