--- a/DoAn/ma_di_tuan.ipynb
+++ b/DoAn/ma_di_tuan.ipynb
@@ -46,19 +46,32 @@
     "\t</tbody>\n",
     "</table>\n",
     "</div>\n",
-    "    \n",
-    "# CƠ SỞ LÝ THUYẾT:\n",
     "\n",
-    "## định lý Schwenk:\n",
-    "https://vi.wikipedia.org/wiki/B%C3%A0i_to%C3%A1n_m%C3%A3_%C4%91i_tu%E1%BA%A7n\n",
+    "# Thiết kế thuật toán\n",
+    "**1. Ý TƯỞNG:**\n",
     "\n",
-    "## Mục tiêu của bài toán:\n",
+    "Định lý Schwenk:\n",
+    "\n",
+    "Cho bàn cờ $mxn$ bất kỳ với $m < n$, không có hành trình đóng nào của quân mã nếu một trong ba điều kiện dưới đây xảy ra:\n",
+    "- Điều kiện 1:  $m$, $n$ đều là số lẻ.\n",
+    "- Điều kiện 2:  $m = 1,2,4$; $n = 1.$\n",
+    "- Điều kiện 3:  $m = 3$     ; $n = 4,6,8.$\n",
+    "\n",
+    "Tham khảo thêm ở\n",
+    "https://vi.wikipedia.org/wiki/B%C3%A0i_to%C3%A1n_m%C3%A3_%C4%91i_tu%E1%BA%A7n \n",
+    "\n",
+    "\n",
+    "**2. Mục tiêu của bài toán:**\n",
+    "\n",
     "Xác định có tồn tại hành trình đóng trên bàn cờ hay là không.\n",
     "    \n",
-    "# Lý do nhóm chọn bài tập như thế này:\n",
+    "**3. Lý do chọn bài toán:**\n",
+    "\n",
     "1. Mã đi tuần là một bài toán quen thuộc nên khi nhìn vào người làm bài sẽ không thấy nản\n",
     "2. Có thể giải mã đi tuần bằng phương pháp BFS, chia để trị tức là bài toán này có thể giải với nhiều phương pháp.\n",
-    "3. Khi đã ra được phương pháp rồi thì người làm bài sẽ thấy dễ thở hơn nếu phải nghĩ đến giải pháp tối ưu hoá"
+    "3. Khi đã ra được phương pháp rồi thì người làm bài sẽ thấy dễ thở hơn nếu phải nghĩ đến giải pháp tối ưu hoá\n",
+    "\n",
+    "# Cài đặt"
    ]
   },
   {
@@ -109,7 +122,7 @@
    "metadata": {},
    "source": [
     "# Thiết kế tập thử nghiệm\n",
-    "| stt | lý do |\n",
+    "| Stt | Lý do |\n",
     "| --- | --- |\n",
     "|  0  | trường hợp hiển nhiên nhằm xác định tính đúng của chương trình|\n",
     "|  1  | xác định thoả điều kiện 1 của định lý schwerk |\n",
@@ -143,7 +156,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
