--- a/DoAn/text_justify.ipynb
+++ b/DoAn/text_justify.ipynb
@@ -4,21 +4,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Text Justification\n",
+    "# Đề bài\n",
     "\n",
     "Cho một danh sách A chứa những từ thuộc ngôn ngữ tự nhiên và một số nguyên b cho biết giới hạn về số lượng ký tự có thể chứa trong một dòng của văn bản. Bài toán đặt ra là bố trí các từ một cách thẫm mỹ vào các hàng để tạo nên một văn bản hoàn chỉnh.\n",
     "\n",
-    "# Ghi chú:\n",
-    "    - Một từ trong danh sách A không được tồn tại kí tự \" \"\n",
-    "    - Dộ dài mỗi từ phải được đảm bảo là lớn hơn 0\n",
-    "    - Đầu vào chương trình là A phải chứa ít nhất một kí tự\n",
+    "# Input\n",
     "\n",
-    "# Ràng buộc:\n",
-    "    - 1 <= A.length <= 300\n",
-    "    - 1 <= A[i].length <= 300\n",
-    "    - 1 <= maxWidght <= 100\n",
+    "Một danh sách A, trong đó\n",
+    "- Một từ trong danh sách A không được tồn tại kí tự \" \"\n",
+    "- Dộ dài mỗi từ phải được đảm bảo là lớn hơn 0\n",
+    "- Đầu vào chương trình là A phải chứa ít nhất một kí tự\n",
+    "\n",
+    "và các điều kiện \n",
+    "- 1 <= A.length <= 300\n",
+    "- 1 <= A[i].length <= 300\n",
+    "- 1 <= maxWidght <= 100\n",
     "    \n",
-    "# ví dụ:\n",
+    "# Output\n",
     "nguồn: [leetcode](https://leetcode.com/problems/text-justification/)\n",
     "```\n",
     "Input: words = [\"What\",\"must\",\"be\",\"acknowledgment\",\"shall\",\"be\"], maxWidth = 16\n",
@@ -51,6 +53,15 @@
     "   \"justification.  \"\n",
     "]\n",
     "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
+    "# Thiết kế thuật toán\n",
+    "**1. Ý TƯỞNG:**"
    ]
   },
   {
@@ -107,8 +118,7 @@
     "blah      blah\n",
     "blah      blah\n",
     "somethinglongs\n",
-    "```\n",
-    "Nhận thấy được sự hạn chế này, LaTex đã tiếng cận vấn đề này theo một hướng huy hoạch động."
+    "```"
    ]
   },
   {
@@ -149,6 +159,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "**2. THUẬT TOÁN:**\n",
+    "\n",
+    "Nhận thấy được sự hạn chế này, LaTex đã tiếng cận vấn đề này theo một hướng huy hoạch động.\n",
+    "\n",
     "Quy hoạch động về nội tại là một phương pháp thiết kế giải thuật với mục tiêu chính là hi sinh sự độ phức tạp về không gian nhưng đổi lại có thể cải thiện độ phức tạp về thời gian(tuy nhiên, số mức độ hi sinh của không gian không đáng kể so với thời gian, nên quy hoạch động là một phương pháp cho ra một hướng giải quyết một bài toán theo hướng chung(general) đáng để sử dụng nếu được cài đặt một cách khôn ngoan). Chúng ta có thể lưu trử giá trị mỗi lần tính toán và gọi lại thay vì phải tái tính toán cho bước tính toán đó lần nữa.\n",
     "\n",
     "Trong LaTex, một hướng tiếp cận được đặt ra là tìm ra một công thức để biểu diễn độ thẩm mỹ hoặc ngược lại là độ mất thẩm mỹ của một dòng được tạo ra bằng cách lấy ra các từ trong danh sách A.\n",
@@ -375,7 +389,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
